--- a/src/Components/Dashboard/Dashboard.css
+++ b/src/Components/Dashboard/Dashboard.css
@@ -13,15 +13,6 @@
   display: flex;
   flex-direction: row;
 }
-h3 {
-  width: 50%;
-  text-align: start;
-  font-family: 'Barlow', sans-serif;
-  font-weight: 100;
-  font-size: 40px;
-  color: #4A4A4A;
-  letter-spacing: -1.11px;
-}
 .cards {
   width: 100%;
 }
